[package]
name = "rust-exercise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.41" }
thiserror = { version = "1.0.30" }
serde = { version = "1.0.127", features = ["derive"] }
csv = { version = "1.1.6" }
tokio = { version = "1.13.0", features = ["full"] }
